add process bar

--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@
                     </div>
                 </div>
 
+                <!-- Hints Panel (Hidden by default) -->
+                <div id="hint-panel" class="story-card hidden">
+                    <div class="progress-header">
+                        <h3>🧩 搜查进度</h3>
+                        <span id="progress-text">0%</span>
+                    </div>
+                    <div class="progress-container">
+                        <div id="progress-fill" class="progress-fill" style="width: 0%"></div>
+                    </div>
+
+                    <ul id="hint-list" style="list-style: none; padding: 0; margin-top: 15px;">
+                        <!-- Hints injected here -->
+                    </ul>
+                </div>
+
                 <div class="chat-container">
                     <div id="chat-history" class="chat-history">
                         <div class="message system">
