--- a/index.html
+++ b/index.html
@@ -85,40 +85,42 @@
 
             <!-- Game Play Area -->
             <div id="game-panel" class="panel hidden">
-                <div class="story-card">
-                    <h2 id="story-title">案件标题</h2>
-                    <div class="story-content">
-                        <p id="story-puzzle">汤面（谜题）...</p>
-                    </div>
-                </div>
-
-                <!-- Hints Panel (Hidden by default) -->
-                <div id="hint-panel" class="story-card hidden">
-                    <div class="progress-header">
-                        <h3>🧩 搜查进度</h3>
-                        <span id="progress-text">0%</span>
-                    </div>
-                    <div class="progress-container">
-                        <div id="progress-fill" class="progress-fill" style="width: 0%"></div>
-                    </div>
-
-                    <ul id="hint-list" style="list-style: none; padding: 0; margin-top: 15px;">
-                        <!-- Hints injected here -->
-                    </ul>
-                </div>
-
-                <div class="chat-container">
-                    <div id="chat-history" class="chat-history">
-                        <div class="message system">
-                            <p>我是你的AI主持人。请提问，我只能回答“是”、“不是”、“是也不是”或“与此无关”。</p>
+                <div id="game-play-area" class="game-play-area">
+                    <div class="story-card">
+                        <h2 id="story-title">案件标题</h2>
+                        <div class="story-content">
+                            <p id="story-puzzle">汤面（谜题）...</p>
                         </div>
                     </div>
 
-                    <div class="input-area">
-                        <input type="text" id="user-input" placeholder="输入你的问题..." autocomplete="off">
-                        <button id="send-btn">提问</button>
+                    <!-- Hints Panel (Hidden by default) -->
+                    <div id="hint-panel" class="story-card hidden">
+                        <div class="progress-header">
+                            <h3>🧩 搜查进度</h3>
+                            <span id="progress-text">0%</span>
+                        </div>
+                        <div class="progress-container">
+                            <div id="progress-fill" class="progress-fill" style="width: 0%"></div>
+                        </div>
+
+                        <ul id="hint-list" style="list-style: none; padding: 0; margin-top: 15px;">
+                            <!-- Hints injected here -->
+                        </ul>
                     </div>
-                    <div id="status-indicator" class="status hidden">正在思考...</div>
+
+                    <div class="chat-container">
+                        <div id="chat-history" class="chat-history">
+                            <div class="message system">
+                                <p>我是你的AI主持人。请提问，我只能回答“是”、“不是”、“是也不是”或“与此无关”。</p>
+                            </div>
+                        </div>
+
+                        <div class="input-area">
+                            <input type="text" id="user-input" placeholder="输入你的问题..." autocomplete="off">
+                            <button id="send-btn">提问</button>
+                        </div>
+                        <div id="status-indicator" class="status hidden">正在思考...</div>
+                    </div>
                 </div>
 
                 <div class="controls">
