--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
     <div class="app-container">
         <header id="main-header" class="game-header">
-            <h1>海龟汤 AI 探案馆</h1>
+            <div class="header-top">
+                <h1>海龟汤 AI 探案馆</h1>
+                <div id="balance-container" class="balance-container hidden">
+                    <span id="balance-text">积分: --</span>
+                    <button id="recharge-btn" class="recharge-btn">充值</button>
+                </div>
+            </div>
             <p class="subtitle">揭开真相的迷雾</p>
         </header>
 
