--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         </div>
 
                         <div id="status-indicator" class="status hidden">正在思考...</div>
+                        <div id="prediction-container" class="prediction-container hidden"></div>
                         <div class="input-area">
                             <div class="input-wrapper">
                                 <div id="ghost-text" class="ghost-text"></div>
